<?xml version='1.0' encoding='UTF-8'?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>9</version>
	</parent>

	<groupId>io.gatling</groupId>
	<artifactId>gatling-maven-parent</artifactId>
	<version>2.2.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<inceptionYear>2011</inceptionYear>
	<url>http://gatling.io</url>

	<developers>
		<developer>
			<id>slandelle@gatling.io</id>
			<name>Stephane Landelle</name>
			<organization>Gatling Corp</organization>
		</developer>
		<developer>
			<id>pdalpra@gatling.io</id>
			<name>Pierre Dal-Pra</name>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git:@github.com:gatling/gatling-maven.git</connection>
		<developerConnection>scm:git:git:@github.com:gatling/gatling-maven.git</developerConnection>
		<url>https://github.com/gatling/gatling-maven</url>
		<tag>HEAD</tag>
	</scm>

	<licenses>
		<license>
			<name>Apache 2</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<modules>
		<module>gatling-maven-plugin</module>
		<module>gatling-highcharts-maven-archetype</module>
	</modules>

	<properties>
		<encoding>UTF-8</encoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<gatling.version>2.2.2</gatling.version>
		<commons-exec.version>1.2</commons-exec.version>
		<junit.version>4.11</junit.version>
		<maven3.version>3.0</maven3.version>
		<plexus-utils.version>3.0</plexus-utils.version>
		<scala-maven-plugin.version>3.2.2</scala-maven-plugin.version>

		<maven-license-plugin.version>1.10.b1</maven-license-plugin.version>
		<nexus-staging-maven-plugin.version>1.6.5</nexus-staging-maven-plugin.version>
		<header.basedir>${project.basedir}</header.basedir>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.gatling.highcharts</groupId>
				<artifactId>gatling-charts-highcharts</artifactId>
				<version>${gatling.version}</version>
			</dependency>
			<dependency>
				<groupId>io.gatling</groupId>
				<artifactId>gatling-app</artifactId>
				<version>${gatling.version}</version>
			</dependency>
			<dependency>
				<groupId>io.gatling</groupId>
				<artifactId>gatling-recorder</artifactId>
				<version>${gatling.version}</version>
			</dependency>
			<dependency>
				<groupId>io.gatling</groupId>
				<artifactId>gatling-compiler</artifactId>
				<version>${gatling.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-exec</artifactId>
				<version>${commons-exec.version}</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-plugin-api</artifactId>
				<version>${maven3.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.plugin-tools</groupId>
				<artifactId>maven-plugin-annotations</artifactId>
				<version>${maven3.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-compat</artifactId>
				<version>${maven3.version}</version>
			</dependency>
			<dependency>
				<groupId>org.codehaus.plexus</groupId>
				<artifactId>plexus-utils</artifactId>
				<version>${plexus-utils.version}</version>
			</dependency>
			<dependency>
				<groupId>net.alchim31.maven</groupId>
				<artifactId>scala-maven-plugin</artifactId>
				<version>${scala-maven-plugin.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-release-plugin</artifactId>
					<configuration>
						<autoVersionSubmodules>true</autoVersionSubmodules>
						<tagNameFormat>@{project.version}</tagNameFormat>
					</configuration>
				</plugin>
				<plugin>
					<groupId>com.mycila.maven-license-plugin</groupId>
					<artifactId>maven-license-plugin</artifactId>
					<version>${maven-license-plugin.version}</version>
					<configuration>
						<header>${header.basedir}/src/etc/header.txt</header>
						<strictCheck>false</strictCheck>
					</configuration>
					<executions>
						<execution>
							<phase>process-sources</phase>
							<goals>
								<goal>format</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.sonatype.plugins</groupId>
					<artifactId>nexus-staging-maven-plugin</artifactId>
					<version>${nexus-staging-maven-plugin.version}</version>
					<configuration>
						<serverId>sonatype-nexus-staging</serverId>
						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
						<autoReleaseAfterClose>true</autoReleaseAfterClose>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
